# fastfetch-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: colors.rs  main.rs
