[package]
name = "fastfetch-rs"
version = "0.1.0"
edition = "2024"
description = "A fast system information tool inspired by fastfetch"
license = "GPL-3.0"
repository = "https://github.com/liberodark/fastfetch-rs"
readme = "README.md"
keywords = ["fastfetch", "system-info", "neofetch", "terminal", "cli"]
categories = ["command-line-utilities", "os", "config"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nix = "0.30"
crossterm = "0.29"
gethostname = "1.0"
regex = "1.11"
glob = "0.3"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
